# rust-windows-shellcode

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config
shellcode/: Cargo.toml
shellcode/src/: main.rs
src/: binds.rs  main.rs  utils.rs
